--- a/css/style.css
+++ b/css/style.css
@@ -198,10 +198,10 @@ img.svg {
   }
 
 .mn-wrap .r-panel .avatar { 
-    width: 250px;
+    width: 300px;
     height: 300px;
     position: relative;
-    border-radius: 100%;
+    
 }
 
 .mn-wrap .r-pane-home {
@@ -219,6 +219,8 @@ img.svg {
 }
 
 .mn-wrap .image {
+    width: 300px ;
+    height: 300px ;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -237,7 +239,8 @@ img.svg {
 
 .mn-wrap .r-panel .r-pane-home .avatar .image {
 
-    border-radius: 50px;
+    background-size: cover;
+    border-radius: 150px;
     /* animation: morph 8s ease-in-out infinite 1s; */
     background-blend-mode: multiply;
     -webkit-box-shadow: inset 0 0 0 9px rgba(255,255,255,.3);
